[package]
name = "ringbeam"
version = "0.1.0"
edition = "2024"
# Most of it is licensed under BSD-3-Clause because it's based on DPDK
# but cache_padding.rs is licensed under MIT OR Apache-2.0 as it's from Crossbeam.
license = "BSD-3-Clause AND (MIT OR Apache-2.0)"

[dependencies]
thiserror = "2.0.12"
loom = { version = "0.7.2", optional = true }

[dev-dependencies]

[features]
likely = []
trusted_len = []
loom = ["dep:loom"]
