[package]
name = "ringbeam"
version = "0.1.0"
edition = "2024"
# Most of it is licensed under BSD-3-Clause because it's based on DPDK
# but cache_padding.rs is licensed under MIT OR Apache-2.0 as it's from Crossbeam.
license = "BSD-3-Clause AND (MIT OR Apache-2.0)"
description = "A blazingly fast channel based on DPDK ringbuffers"
repository = "https://github.com/kriskras99/ringbeam"
categories = ["algorithms", "concurrency", "data-structures"]
keywords = ["channel", "dpdk", "ringbuffer"]

[dependencies]
thiserror = "2.0.12"
loom = { version = "0.7.1", default-features = false, features = ["checkpoint"], optional = true }
shuttle = { version = "0.8.1", default-features = false, features = [], optional = true}

[dev-dependencies]

[features]
likely = []
trusted_len = []
loom = ["dep:loom", "safe_maybeuninit"]
shuttle = ["dep:shuttle", "safe_maybeuninit"]
safe_maybeuninit = []

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
missing_assert_message = "warn"
missing_docs_in_private_items = "warn"
missing_errors_doc = "warn"
missing_inline_in_public_items = "warn"
missing_panics_doc = "warn"
renamed_function_params = "warn"
semicolon_inside_block = "warn"
std_instead_of_core = "warn"
undocumented_unsafe_blocks = "warn"
unused_trait_names = "warn"
unwrap_used = "warn"
# This needs to be done constantly, because N needs to be usize but the calculations u32
cast_possible_truncation = "allow"
cast_lossless = "allow"
# .deref() looks beter than &*
explicit_deref_methods = "allow"

[lints.rust]
missing_docs = "warn"

[lints.rustdoc]
missing_crate_level_docs = "warn"
private_doc_tests = "warn"
unescaped_backticks = "warn"
